--- a/ui.html
+++ b/ui.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://sector1.net/job/building-safety-manager/137881/newcastleupontyne/housing'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sector1.net/job/building-safety-manager/137881/newcastleupontyne/housing'>
 	BUILDING SAFETY MANAGER job in Newcastle upon Tyne 37 hours per week
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jhs.referrals.selectminds.com/jobs/nurse-1-chemo-certified-required-9383'>Nurse 1 CHEMO CERTIFIED REQUIRED - Jackson Health System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jhs.referrals.selectminds.com/jobs/nurse-1-chemo-certified-required-9383'>Nurse 1 CHEMO CERTIFIED REQUIRED - Jackson Health System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -204,7 +204,7 @@
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oGjH9fwz&__jvst=Employee&__jvsd=s3HYhiwM&__jvsc=Twitter&bid=ntrXpMwx'> Splash Damage Careers - Senior UI Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oGjH9fwz&__jvst=Employee&__jvsd=s3HYhiwM&__jvsc=Twitter&bid=ntrXpMwx'> Splash Damage Careers - Senior UI Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -234,11 +234,11 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999698576945-ui-developer-w2-only-'>American IT Staff UI Developer (W2 Only) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999698576945-ui-developer-w2-only-'>American IT Staff UI Developer (W2 Only) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=feed'>
       Senior UI/UX Designer at Insiten - Atlanta, GA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
@@ -316,7 +316,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://recruit.apo.ucla.edu/JPF05093'>Teaching and Learning Librarian for Library Special Collections (JPF05093) - UCLA Academic RECRUIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05093'>Teaching and Learning Librarian for Library Special Collections (JPF05093) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -350,7 +350,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698522791-caissier-cuisinier-nuit-dimanche-au-jeudi-prime-de-nuit'>McDonald's Restaurants Caissier/Cuisinier - Nuit (Dimanche au jeudi) PRIME DE NUIT | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698522791-caissier-cuisinier-nuit-dimanche-au-jeudi-prime-de-nuit'>McDonald's Restaurants Caissier/Cuisinier - Nuit (Dimanche au jeudi) PRIME DE NUIT | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -362,7 +362,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/w6htapdmia6u6qajx4nfue7ayh'>UI Engineer I  | Current Openings</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/w6htapdmia6u6qajx4nfue7ayh'>UI Engineer I  | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -454,7 +454,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/quality-improvement-administrator-5634'>Quality Improvement Administrator - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/quality-improvement-administrator-5634'>Quality Improvement Administrator - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
