--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://take1.recruitee.com/o/experience-designer-produto-aux0319'>
+      Experience Designer (Produto) AUX0319 - Take
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PulseCommerce/743999698684818-ux-graphic-design-intern'>Pulse Commerce UX / Graphic Design Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -57,11 +63,11 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nf7HqMwK'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nf7HqMwK'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o9xQ8fwo&__jvst=Employee+Referral&__jvsd=s6ellhwM&__jvsc=Twitter&bid=nTwDqMwJ'>ServiceNow Careers - Senior Product Manager, Platform UX</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o9xQ8fwo&__jvst=Employee+Referral&__jvsd=s6ellhwM&__jvsc=Twitter&bid=nTwDqMwJ'>ServiceNow Careers - Senior Product Manager, Platform UX</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -115,7 +121,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/greenparksports/jobs/4440274002'>Job Application for UI/UX Designer at GreenPark Sports</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/greenparksports/jobs/4440274002'>Job Application for UI/UX Designer at GreenPark Sports</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -153,7 +159,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/voltaiq/jobs/1937977'>Job Application for UI/UX Designer at Voltaiq</a></h5> 
+<h5><a href='https://boards.greenhouse.io/voltaiq/jobs/1937977'>Job Application for UI/UX Designer at Voltaiq</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -177,7 +183,7 @@
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/177e35de-f0ca-4ac2-9af2-8f9b77a546b0'>Kalo - Senior Product (UX) Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/kalo/177e35de-f0ca-4ac2-9af2-8f9b77a546b0'>Kalo - Senior Product (UX) Designer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -249,7 +255,7 @@
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  San Francisco, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
       UI/UX Designer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -287,7 +293,7 @@
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698201582-ux-researcher?rsid=01100586-df81-4449-9d6d-21dbb881af17&refChan=PORTAL'>Renaissance UX Researcher | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698201582-ux-researcher?rsid=01100586-df81-4449-9d6d-21dbb881af17&refChan=PORTAL'>Renaissance UX Researcher | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -307,7 +313,7 @@
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1932626'>Job Application for UX Designer  at AKQA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/akqa/jobs/1932626'>Job Application for UX Designer  at AKQA</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -319,7 +325,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585024'>Stellenangebot: UX Designer (d/m/w) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585024'>Stellenangebot: UX Designer (d/m/w) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -357,7 +363,7 @@
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -466,10 +472,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=ougkbfwZ&__jvst=Employee+Referral&__jvsd=sjhePhwp&__jvsc=Twitter&bid=nEbQnMwj'>WP Engine Careers - Senior Director, User Experience - UX</a></h5> 
-<p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
